// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderField case1: snapshot test, @readOnly is false 1`] = `
<div>
  <h6 />
  <input
    className="form-control"
    disabled={false}
    readOnly={false}
    type="type"
  />
  <h6
    className="text-danger"
  />
</div>
`;

exports[`renderField case2: snapshot test, @readOnly is true 1`] = `
<div>
  <h6 />
  <input
    className="form-control"
    disabled={false}
    readOnly={true}
    type="type"
  />
  <h6
    className="text-danger"
  />
</div>
`;

exports[`renderField case3: snapshot test, @touched is true 1`] = `
<div>
  <h6 />
  <input
    className="form-control"
    disabled={false}
    readOnly={true}
    type="type"
  />
  <h6
    className="text-danger"
  >
    <span />
  </h6>
</div>
`;

exports[`renderField case4: snapshot test, @touched is false 1`] = `
<div>
  <h6 />
  <input
    className="form-control"
    disabled={false}
    readOnly={true}
    type="type"
  />
  <h6
    className="text-danger"
  />
</div>
`;

exports[`renderField case5: snapshot test, @error is true 1`] = `
<div>
  <h6 />
  <input
    className="form-control"
    disabled={false}
    readOnly={true}
    type="type"
  />
  <h6
    className="text-danger"
  >
    <span />
  </h6>
</div>
`;

exports[`renderField case6: snapshot test, @error is false 1`] = `
<div>
  <h6 />
  <input
    className="form-control"
    disabled={false}
    readOnly={true}
    type="type"
  />
  <h6
    className="text-danger"
  >
    <span />
  </h6>
</div>
`;

exports[`renderField case7: snapshot test, @warning is true 1`] = `
<div>
  <h6 />
  <input
    className="form-control"
    disabled={false}
    readOnly={true}
    type="type"
  />
  <h6
    className="text-danger"
  >
    <span />
  </h6>
</div>
`;

exports[`renderField case8: snapshot test, @warning is false 1`] = `
<div>
  <h6 />
  <input
    className="form-control"
    disabled={false}
    readOnly={true}
    type="type"
  />
  <h6
    className="text-danger"
  />
</div>
`;
